--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,13 +1,31 @@
-version: '3'
-
+---
+# WARNING: This configuration is only for local demonstration purposes!
+version: '3.3'
 services:
-  web:
-    container_name: controlcenter
-    build: .
+  control-center:
+    image: control-center
+    depends_on:
+      db-ready:
+        condition: service_completed_successfully
     ports:
-      - 8080:80
-      - 8443:443
-    extra_hosts:
-        - "vatsca.local:host-gateway"
-    volumes:
-      - ./:/app
+      - '8080:80'
+    environment:
+      - DB_HOST=db
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+      - DB_DATABASE=test
+      - OAUTH_ID=443
+      - OAUTH_SECRET=FdFHEWwYU2QBNUd9x5O6SlY2mFdnxv2AqitfD9pD 
+      - OAUTH_URL="https://auth-dev.vatsim.net"
+    command: >-
+      sh -c "php artisan migrate --force; exec apache2-foreground"
+  db:
+    image: docker.io/library/mariadb:11
+    ports:
+      - 3306:3306
+    environment:
+      MARIADB_DATABASE: test
+      MARIADB_ROOT_PASSWORD: root
+  db-ready:
+    image: atkrad/wait4x
+    command: mysql "root:root@tcp(db)/test" -t 10s -i 500ms
