--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -7,8 +7,8 @@ name: Release (release-please)
 on:
   push:
     branches:
-      - main
-      - ci/release-please
+#      - main
+#      - ci/release-please
 
   workflow_dispatch:
 
